--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.2",
   "description": "terminal-screen is a terminal wrapper, providing easy access without ANSI codes or dirty details.",
   "main": "src/terminal-screen.js",
-  "scripts": {},
+  "scripts": {
+    "test": "node tests/core.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/eozan/terminal-screen.git"
@@ -25,5 +27,8 @@
   "bugs": {
     "url": "https://github.com/eozan/terminal-screen/issues"
   },
-  "homepage": "https://github.com/eozan/terminal-screen"
+  "homepage": "https://github.com/eozan/terminal-screen",
+  "devDependencies": {
+    "tape": "^4.6.0"
+  }
 }
