--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "terminal-screen is a terminal wrapper, providing easy access without ANSI codes or dirty details.",
   "main": "src/terminal-screen.js",
   "scripts": {
-    "test": "node tests/main.js"
+    "test": "node tests/all.js"
   },
   "repository": {
     "type": "git",
