--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.3",
   "description": "terminal-screen is a terminal wrapper, providing easy access without ANSI codes or dirty details.",
   "main": "src/terminal-screen.js",
-  "scripts": {
-    "test": "node tests/all.js"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eozan/terminal-screen.git"
+    "url": "git+https://github.com/ozanozbek/terminal-screen.git"
   },
   "keywords": [
     "terminal",
@@ -25,11 +23,7 @@
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/eozan/terminal-screen/issues"
+    "url": "https://github.com/ozanozbek/terminal-screen/issues"
   },
-  "homepage": "https://github.com/eozan/terminal-screen",
-  "devDependencies": {
-    "sinon": "^1.17.5",
-    "tape": "^4.6.0"
-  }
+  "homepage": "https://github.com/ozanozbek/terminal-screen"
 }
