--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "terminal-screen",
-  "version": "0.2.1",
-  "description": "terminal-screen is a terminal wrapper, providing easy access without ANSI codes or dirty details.",
-  "main": "src/terminal-screen.js",
+  "version": "0.2.9",
+  "description": "",
+  "main": "",
   "scripts": {},
   "repository": {
     "type": "git",
